samples/_failures_safe/1761697631_3ddf57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea3a01de.c: In function ‘main’:
./samples/SAFE/__tmp_ea3a01de.c:157:13: error: expected identifier or ‘(’ at end of input
  157 |             LogEntry
      |             ^~~~~~~~
./samples/SAFE/__tmp_ea3a01de.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea3a01de.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea3a01de.c:157:13: error: expected declaration or statement at end of input
